test: cover non-map OBJECT content types in acceptance tests
The `TOOL_RESULT` history item sends five distinct `OBJECT` content blocks
covering every non-map JSON value category: array of objects, array of
scalars, integer, boolean, and plain string.

`shouldReturnObjectContentForAllJsonValueTypes` asserts that all five
values survive the full pipeline (HTTP create → Zeebe record →
camunda-exporter → Secondary storage (ES/OS, RDBMS) → search response) with their types
and values intact, using `allSatisfy` for type check and extracting
`getObject` with `containsExactly` for value verification.